--- a/parasite.vcxproj.filters
+++ b/parasite.vcxproj.filters
@@ -21,5 +21,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
+    <None Include="version\version.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="version\version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <MASM Include="version\64\version_64.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
+    <MASM Include="version\32\version_32.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
   </ItemGroup>
 </Project>
