--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@ mono_crash.*
 
 # Build results
 [Dd]ebug/
+[Dd]ebug - Proxy/
 [Dd]ebugPublic/
 [Rr]elease/
+[Rr]elease - Proxy/
 [Rr]eleases/
 x64/
 x86/
